tests/samples/negative/generics/where_drop_resource_capability.ax
module where_drop_resource_capability;

fn id<T>(value: T) -> T where T: Drop {
    return value;
}

fn main() -> i32 {
    return id(1);
}
